changed financial services to consulting services and added content to the section, including css adjustments

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="section-heading">
-              <h2>Financial <em>Services</em></h2>
+              <h2>Consulting <em>Services</em></h2>
               <span>Aliquam id urna imperdiet libero mollis hendrerit</span>
             </div>
           </div>
@@ -184,12 +184,11 @@
             <div class="service-item">
               <img src="assets/images/service_01.jpg" alt="" />
               <div class="down-content">
-                <h4>Digital Currency</h4>
+                <h4>Security Operations Automation</h4>
                 <p>
-                  Sed tincidunt dictum lobortis. Aenean tempus diam vel augue
-                  luctus dignissim. Nunc ornare leo tortor.
+                  We procide expertise in automating complex security operations workflows and procedures.
                 </p>
-                <a href="" class="filled-button">Read More</a>
+                <!-- <a href="" class="filled-button">Read More</a> -->
               </div>
             </div>
           </div>
@@ -197,12 +196,11 @@
             <div class="service-item">
               <img src="assets/images/service_02.jpg" alt="" />
               <div class="down-content">
-                <h4>Market Analysis</h4>
-                <p>
-                  Sed tincidunt dictum lobortis. Aenean tempus diam vel augue
-                  luctus dignissim. Nunc ornare leo tortor.
+                <h4>Security Transformation Management</h4>
+                <p style="padding-bottom: 10%;">
+                  We provide guidance in helping our clients set up next gen SOC capabilities.
                 </p>
-                <a href="" class="filled-button">Read More</a>
+                <!-- <a href="" class="filled-button">Read More</a> -->
               </div>
             </div>
           </div>
@@ -211,11 +209,10 @@
               <img src="assets/images/service_03.jpg" alt="" />
               <div class="down-content">
                 <h4>Historical Data</h4>
-                <p>
-                  Sed tincidunt dictum lobortis. Aenean tempus diam vel augue
-                  luctus dignissim. Nunc ornare leo tortor.
+                <p style="padding-bottom: 8%;">
+                  Our team of experts can fully automate L1 operations , allowing your analysts to focus on more interesting work.
                 </p>
-                <a href="" class="filled-button">Read More</a>
+                <!-- <a href="" class="filled-button">Read More</a> -->
               </div>
             </div>
           </div>
