--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <div class="down-content">
               <h4>Security Operations Automation</h4>
               <p>
-                We procide expertise in automating complex security operations workflows and procedures.
+                We provide expertise in automating complex security operations workflows and procedures.
               </p>
               <!-- <a href="" class="filled-button">Read More</a> -->
             </div>
@@ -502,8 +502,7 @@
         <div class="col-md-3 footer-item">
           <h4>Sonani Consulting</h4>
           <p>
-            Vivamus tellus mi. Nulla ne cursus elit,vulputate. Sed ne cursus
-            augue hasellus lacinia sapien vitae.
+          30 N Gould St Ste N Sheridan WY 82801
           </p>
           <ul class="social-icons">
             <li>
@@ -582,8 +581,7 @@
       <div class="row">
         <div class="col-md-12">
           <p>
-            Copyright &copy; 2020 Financial Business Co., Ltd. - Design:
-            <a rel="nofollow noopener" href="https://templatemo.com" target="_blank">TemplateMo</a>
+            Copyright &copy; 2024 Sonani Consulting.
           </p>
         </div>
       </div>
