--- a/index.html
+++ b/index.html
@@ -212,8 +212,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="left-content">
-            <span>Lorem ipsum dolor sit amet</span>
-            <h2>Our solutions for your <em>business growth</em></h2>
+            <h2>Our solutions for your <em>cybersecurity transformation</em></h2>
             <p>
               Pellentesque ultrices at turpis in vestibulum. Aenean pretium
               elit nec congue elementum. Nulla luctus laoreet porta. Maecenas
@@ -465,35 +464,6 @@
     </div>
   </div>
 
-  <div class="partners">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="owl-partners owl-carousel">
-            <div class="partner-item">
-              <img src="assets/images/client-01.png" title="1" alt="1" />
-            </div>
-
-            <div class="partner-item">
-              <img src="assets/images/client-01.png" title="2" alt="2" />
-            </div>
-
-            <div class="partner-item">
-              <img src="assets/images/client-01.png" title="3" alt="3" />
-            </div>
-
-            <div class="partner-item">
-              <img src="assets/images/client-01.png" title="4" alt="4" />
-            </div>
-
-            <div class="partner-item">
-              <img src="assets/images/client-01.png" title="5" alt="5" />
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
   <!-- Footer Starts Here -->
   <footer>
