removed the sample texts

--- a/index.html
+++ b/index.html
@@ -147,8 +147,7 @@
       <div class="row">
         <div class="col-md-8">
           <h4>Request a call back right now ?</h4>
-          <!-- <span>Mauris ut dapibus velit cras interdum nisl ac urna tempor
-            mollis.</span> -->
+       
         </div>
         <div class="col-md-4">
           <a href="#contactus" class="border-button">Contact Us</a>
@@ -213,14 +212,14 @@
         <div class="col-md-6">
           <div class="left-content">
             <h2>Our solutions for your <em>cybersecurity transformation</em></h2>
-            <p>
+            <!-- <p>
               Pellentesque ultrices at turpis in vestibulum. Aenean pretium
               elit nec congue elementum. Nulla luctus laoreet porta. Maecenas
               at nisi tempus, porta metus vitae, faucibus augue.
               <br /><br />Fusce et venenatis ex. Quisque varius, velit quis
               dictum sagittis, odio velit molestie nunc, ut posuere ante
               tortor ut neque.
-            </p>
+            </p> -->
             <!-- <a href="" class="filled-button">Read More</a> -->
           </div>
         </div>
@@ -469,7 +468,7 @@
   <footer>
     <div class="container">
       <div class="row">
-        <div class="col-md-3 footer-item">
+        <div class="col-md-4 footer-item">
           <h4>Sonani Consulting</h4>
           <p>
           30 N Gould St Ste N Sheridan WY 82801
@@ -489,17 +488,17 @@
             </li>
           </ul>
         </div>
-        <div class="col-md-3 footer-item">
-          <h4>Useful Links</h4>
+        <!-- <div class="col-md-3 footer-item"> -->
+          <!-- <h4>Useful Links</h4>
           <ul class="menu-list">
             <li><a href="#">Vivamus ut tellus mi</a></li>
             <li><a href="#">Nulla nec cursus elit</a></li>
             <li><a href="#">Vulputate sed nec</a></li>
             <li><a href="#">Cursus augue hasellus</a></li>
             <li><a href="#">Lacinia ac sapien</a></li>
-          </ul>
-        </div>
-        <div class="col-md-3 footer-item">
+          </ul> -->
+        <!-- </div> -->
+        <div class="col-md-4 footer-item">
           <h4>Additional Pages</h4>
           <ul class="menu-list">
             <li><a href="#">About Us</a></li>
@@ -509,7 +508,7 @@
             <li><a href="#">Privacy Policy</a></li>
           </ul>
         </div>
-        <div class="col-md-3 footer-item last-item">
+        <div class="col-md-4 footer-item last-item">
           <h4>Contact Us</h4>
           <div class="contact-form">
             <form id="contact footer-contact" action="" method="post">
