--- a/index.html
+++ b/index.html
@@ -359,9 +359,8 @@
                 <h4>George Walker</h4>
                 <span>Chief Financial Analyst</span>
                 <p>
-                  "Nulla ullamcorper, ipsum vel condimentum congue, mi odio
-                  vehicula tellus, sit amet malesuada justo sem sit amet quam.
-                  Pellentesque in sagittis lacus."
+                  "The SOC transformation process has been extremely smooth, and I would highly recommned Sonani Consulting"
+
                 </p>
               </div>
               <img src="http://placehold.it/60x60" alt="" />
@@ -372,15 +371,14 @@
                 <h4>John Smith</h4>
                 <span>Market Specialist</span>
                 <p>
-                  "In eget leo ante. Sed nibh leo, laoreet accumsan euismod
-                  quis, scelerisque a nunc. Mauris accumsan, arcu id ornare
-                  malesuada, est nulla luctus nisi."
+                                   "High level of expertise and product knowledge was shown by the consultants"
+
                 </p>
               </div>
               <img src="http://placehold.it/60x60" alt="" />
             </div>
 
-            <div class="testimonial-item">
+            <!-- <div class="testimonial-item">
               <div class="inner-content">
                 <h4>David Wood</h4>
                 <span>Chief Accountant</span>
@@ -405,7 +403,7 @@
                 </p>
               </div>
               <img src="http://placehold.it/60x60" alt="" />
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
