added reviewers names

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
             <div class="testimonial-item">
               <div class="inner-content">
                 <h4>George Walker</h4>
-                <span>Chief Financial Analyst</span>
+                <span>Chief Information Security Officer</span>
                 <p>
                   "The SOC transformation process has been extremely smooth, and I would highly recommned Sonani Consulting"
 
@@ -369,7 +369,7 @@
             <div class="testimonial-item">
               <div class="inner-content">
                 <h4>John Smith</h4>
-                <span>Market Specialist</span>
+                <span>Cybersecurity Specialist</span>
                 <p>
                                    "High level of expertise and product knowledge was shown by the consultants"
 
