--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
 
                 </p>
               </div>
-              <img src="http://placehold.it/60x60" alt="" />
+              <!-- <img src="http://placehold.it/60x60" alt="" /> -->
             </div>
 
             <div class="testimonial-item">
@@ -373,7 +373,7 @@
 
                 </p>
               </div>
-              <img src="http://placehold.it/60x60" alt="" />
+              <!-- <img src="http://placehold.it/60x60" alt="" /> -->
             </div>
 
            
